fix spacing on mobile

--- a/styles/partials/_hero.scss
+++ b/styles/partials/_hero.scss
@@ -32,7 +32,7 @@
   }
 
   @include touch {
-    height: 55vh;
+    height: 70vh;
     min-height: 50vh;
   }
   &.registration {
